# Rental

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
BackEnd/app/api/routes/: cars.py  rentals.py  (+1 more)
BackEnd/app/models/: documents.py  enums.py
BackEnd/app/schemas/: cars.py  rentals.py
BackEnd/app/services/: fleet_service.py
backend/: __init__.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  metrics.py
backend/app/db/: __init__.py  indexes.py  mongodb.py  object_ids.py
backend/app/messaging/: __init__.py  consumer.py  events.py  publisher.py
backend/app/models/: __init__.py  documents.py  enums.py
backend/app/repositories/: __init__.py  cars.py  events.py  rentals.py
backend/app/schemas/: __init__.py  cars.py  events.py  rentals.py
backend/app/services/: fleet_service.py
backend/app/workers/: event_worker.py
docs/: system-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: fleetApi.ts  http.ts
frontend/src/components/: AppHeader.tsx  StatusBadge.tsx  SummaryTile.tsx
frontend/src/pages/: DashboardPage.tsx
frontend/src/styles/: global.css
frontend/src/types/: fleet.ts
frontend/src/utils/: dates.ts  labels.ts
tests/backend/: conftest.py  test_api.py  test_event_worker.py  test_fleet_service.py  test_logging.py  test_mongo_repositories.py
(+9 files in other folders)
