[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rental-fleet-manager"
version = "0.1.0"
description = "MongoDB-backed vehicle rental management API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.4.0",
    "fastapi>=0.111.0",
    "pydantic-settings>=2.2.1",
    "prometheus-client>=0.20.0",
    "pymongo>=4.13.0",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
